<?xml version='1.0' encoding='utf-8'?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:ns1="http://schemas.android.com/tools" android:id="@+id/root_container" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/bg_color" ns1:context=".ui.MainActivity" ns1:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2 android:id="@+id/main_pager" android:layout_width="0dp" android:layout_height="0dp" android:orientation="horizontal" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@id/bottom_nav" app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/qr_view" android:layout_width="0dp" android:layout_height="0dp" android:visibility="gone" app:layout_constraintBottom_toTopOf="@id/bottom_nav" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" ns1:visibility="gone">

            <include layout="@layout/qr_view" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView android:id="@+id/bottom_nav" android:layout_width="0dp" android:layout_height="wrap_content" android:minHeight="80dp" android:background="@color/bg_color" app:elevation="0dp" app:itemIconSize="24dp" app:itemTextAppearanceActive="@style/TextAppearance.ShareX.Navigation" app:itemTextAppearanceInactive="@style/TextAppearance.ShareX.Navigation" app:itemIconTint="@color/navigation_item_tint" app:itemRippleColor="@color/outline_soft" app:itemTextColor="@color/navigation_item_tint" app:labelVisibilityMode="labeled" app:menu="@menu/bottom_navigation" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView android:id="@+id/navigationView" android:layout_width="300dp" android:layout_height="match_parent" android:layout_gravity="start" android:background="@color/bg_color" android:theme="@style/ProductSansStyle" android:fitsSystemWindows="false" app:headerLayout="@layout/drawer_header" app:itemIconSize="24dp" app:itemIconTint="@color/drawer_item_tint" app:itemTextColor="@color/drawer_item_tint" app:itemHorizontalPadding="16dp" app:itemIconPadding="16dp" app:itemVerticalPadding="6dp" app:menu="@menu/menu" app:itemTextAppearance="@style/TextAppearance.ShareX.Drawer" app:itemShapeAppearanceOverlay="@style/ShapeAppearance.ShareX.Drawer" app:itemShapeFillColor="@color/drawer_item_fill" app:itemShapeInsetStart="12dp" app:itemShapeInsetEnd="12dp" app:subheaderColor="@color/txt_color_secondary" />

</androidx.drawerlayout.widget.DrawerLayout>